exports[`test should render a default table row 1`] = `
<tr
  className="terra-Table-row">
  <TableRowContent
    display="Table Data" />
  <TableRowContent
    display="Table Data" />
  <TableRowContent
    display="Table Data" />
</tr>
`;

exports[`test should render a selectable table row 1`] = `
<tr
  className="terra-Table--isSelectable terra-Table-row">
  <TableRowContent
    display="Table Data" />
  <TableRowContent
    display="Table Data" />
  <TableRowContent
    display="Table Data" />
</tr>
`;

exports[`test should render a selected table row 1`] = `
<tr
  className="terra-Table--isSelected terra-Table-row">
  <TableRowContent
    display="Table Data" />
  <TableRowContent
    display="Table Data" />
  <TableRowContent
    display="Table Data" />
</tr>
`;
